changed container-flex to container fluid, addressed whitespace issue on mobile

--- a/style.css
+++ b/style.css
@@ -105,10 +105,13 @@ font-weight: bold;
 }
 .menu-header {
   font-size: clamp(5rem, 20vw, 10rem);
+  max-width: 100%;
 }
 
 .location-header {
     font-size: clamp(4rem, 10vw, 8rem);
+    max-width: 100%;
+
 }
 
 .menu-categories {
@@ -120,6 +123,7 @@ font-weight: bold;
 .menu-pic {
   height: 400px;
   object-fit: cover;
+  padding: 0;
 }
 
 .footer-top {
